--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "enlay-node",
-  "version": "1.0.0",
+  "name": "@enlay/node",
+  "version": "1.0.1",
   "description": "SDK to interact with Enlay",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "files": [
+    "lib/**/*"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
