--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   },
   "homepage": "https://github.com/duccltd/enlay-node#readme",
   "devDependencies": {
+    "@types/humps": "^2.0.1",
     "eslint": "^8.3.0",
     "prettier": "^2.5.0",
     "tslint": "^6.1.3",
     "typescript": "^4.5.2"
   },
   "dependencies": {
-    "axios": "^0.24.0"
+    "axios": "^0.24.0",
+    "humps": "^2.0.1"
   }
 }
